[Cocoa] Include borderless windows in the MacOS window cycle.

Currently, only framed windows are included for the MacOS window cycle,
which can be done with cmd+`. This change includes frameless windows,
such as the Picture-in-Picture window, to be part of this behavior.

Bug: 849957
Change-Id: Iff96d45774d3b87fcee7a8f3fa0b1fefaa2469f3
Reviewed-on: https://chromium-review.googlesource.com/1124874
Commit-Queue: apacible <apacible@chromium.org>
Reviewed-by: Trent Apted <tapted@chromium.org>
Cr-Commit-Position: refs/heads/master@{#573089}
Former-commit-id: 4d3efe522f320dd2abf86b70407be67d1901b98d